# public/docs/openapi.yaml
@@ -9,48 +9,7 @@ servers:
 paths:
   /api/login:
     post:
-      summary: 'Handle an incoming authentication request.'
-      description: ''
-      parameters:
-        -
-          in: header
-          name: Content-Type
-          description: ''
-          example: application/json
-          schema:
-            type: string
-        -
-          in: header
-          name: Accept
-          description: ''
-          example: application/json
-          schema:
-            type: string
-      responses: {  }
-      tags:
-        - Endpoints
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  description: 'Must be a valid email address.'
-                  example: koepp.paula@example.com
-                password:
-                  type: string
-                  description: ''
-                  example: id
-              required:
-                - email
-                - password
-      security: []
-  /api/user:
-    get:
-      summary: ''
+      summary: 'Login the user.'
       description: ''
       parameters:
         -
@@ -68,24 +27,38 @@ paths:
           schema:
             type: string
       responses:
-        401:
+        200:
           description: ''
           content:
             application/json:
               schema:
                 type: object
-                example:
-                  message: Unauthenticated.
-                properties:
-                  message:
-                    type: string
-                    example: Unauthenticated.
+                example: {  }
+                properties: {  }
       tags:
-        - Endpoints
+        - 'Auth APIs'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: 'The user''s email or phone number'
+                  example: dolor
+                password:
+                  type: string
+                  description: 'The user''s password'
+                  example: voluptatem
+              required:
+                - email
+                - password
       security: []
-  /api/logout:
+  /api/register:
     post:
-      summary: 'Destroy an authenticated session.'
+      summary: 'Register the user'
       description: ''
       parameters:
         -
@@ -102,10 +75,258 @@ paths:
           example: application/json
           schema:
             type: string
-      responses: {  }
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
       tags:
-        - Endpoints
+        - 'Auth APIs'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                  description: 'The vendor''s first name'
+                  example: ut
+                last_name:
+                  type: string
+                  description: 'The vendor''s last name'
+                  example: perspiciatis
+                email:
+                  type: string
+                  description: 'The vendor''s email'
+                  example: voluptates
+                phone_number:
+                  type: string
+                  description: 'The vendor''s phone number'
+                  example: et
+                password:
+                  type: string
+                  description: 'The vendor''s password'
+                  example: est
+                role:
+                  type: string
+                  description: 'The person''s role(vendor or user)'
+                  example: necessitatibus
+              required:
+                - first_name
+                - last_name
+                - email
+                - phone_number
+                - password
+                - role
       security: []
+  /api/forgot-password:
+    post:
+      summary: 'Request password reset code'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+      tags:
+        - 'Auth APIs'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                phone_number:
+                  type: string
+                  description: 'The user''s phone number'
+                  example: quisquam
+              required:
+                - phone_number
+      security: []
+  /api/otp/validate:
+    post:
+      summary: 'Validate the OTP'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+      tags:
+        - 'Auth APIs'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                code:
+                  type: string
+                  description: 'The Entered code'
+                  example: consequuntur
+              required:
+                - code
+      security: []
+  /api/reset-password:
+    post:
+      summary: 'Reset Password'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+      tags:
+        - 'Auth APIs'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                code:
+                  type: string
+                  description: ''
+                  example: aliquid
+                password:
+                  type: string
+                  description: 'New password'
+                  example: repellendus
+                password_confirmation:
+                  type: string
+                  description: 'New password confirmation'
+                  example: quis
+              required:
+                - code
+                - password
+                - password_confirmation
+      security: []
+  /api/logout:
+    post:
+      summary: Logout.
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+      tags:
+        - 'Auth APIs'
+  /api/user:
+    get:
+      summary: 'Get user details.'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example: {  }
+                properties: {  }
+      tags:
+        - 'User APIs'
   /api/services:
     get:
       summary: 'Get all services.'
@@ -176,27 +397,27 @@ paths:
                 title:
                   type: string
                   description: 'The title of the new service'
-                  example: quia
+                  example: tenetur
                 price_min:
                   type: string
                   description: ''
-                  example: repellendus
+                  example: quasi
                 location_lat:
                   type: string
                   description: 'The latitude location of the new service'
-                  example: minima
+                  example: necessitatibus
                 location_long:
                   type: string
                   description: 'The longitude location of the new service'
-                  example: nisi
+                  example: tempore
                 description:
                   type: text
                   description: 'The description of the new service'
-                  example: nihil
+                  example: omnis
                 price:
                   type: string
                   description: 'The price of the new service'
-                  example: suscipit
+                  example: assumenda
               required:
                 - title
                 - price_min
@@ -273,23 +494,23 @@ paths:
                 title:
                   type: string
                   description: 'The title of the service'
-                  example: voluptatem
+                  example: consequatur
                 description:
                   type: string
                   description: 'The description of the service'
-                  example: reprehenderit
+                  example: inventore
                 price:
                   type: string
                   description: 'The price of the service'
-                  example: consequatur
+                  example: minus
                 location_lat:
                   type: string
                   description: 'The latitude location of the new service'
-                  example: commodi
+                  example: odio
                 location_long:
                   type: string
                   description: 'The longitude location of the new service'
-                  example: odit
+                  example: minima
               required:
                 - title
     parameters:
@@ -306,10 +527,13 @@ paths:
             value: ''
           present:
             summary: 'When the value is present'
-            value: laboriosam
+            value: ipsam
 tags:
   -
-    name: Endpoints
+    name: 'Auth APIs'
+    description: ''
+  -
+    name: 'User APIs'
     description: ''
   -
     name: 'Services APIs'
