# routes/api.php
@@ -1,7 +1,9 @@
 <?php
 
 use App\Http\Controllers\Auth\AuthenticatedSessionController;
+use App\Http\Controllers\Auth\RegisteredUserController;
 use App\Http\Controllers\ServiceController;
+use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -17,14 +19,16 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::post('/login', [AuthenticatedSessionController::class, 'store']);
+Route::post('/register', [RegisteredUserController::class, 'store']);
+Route::post('/forgot-password', [RegisteredUserController::class, 'sendResetPasswordCode']);
+Route::post('/otp/validate', [RegisteredUserController::class, 'validateOtp']);
+Route::post('/reset-password', [RegisteredUserController::class, 'resetPassword']);
 
 Route::get('/services', [ServiceController::class, 'index']);
 Route::get('/services/{id}', [ServiceController::class, 'show']);
 
 Route::middleware(['auth:sanctum'])->group(function () {
-    Route::get('/user', function (Request $request) {
-        return $request->user();
-    });
+    Route::get('/user', [UserController::class, 'show']);
     Route::post('/services', [ServiceController::class, 'store']);
     Route::post('/services/{id}', [ServiceController::class, 'update']);
 
